--- a/bai_tap_them/quan_ly_so_tiet_kiem_ngan_hang/src/main/resources/templates/views/list.html
+++ b/bai_tap_them/quan_ly_so_tiet_kiem_ngan_hang/src/main/resources/templates/views/list.html
@@ -21,7 +21,8 @@
 
     </div>
 </form>
-<br>
+<button><a th:href="@{/index}">Reset</a></button>
+<br><br>
 <table border="1">
     <tr>
         <!--            <th>No</th>-->
@@ -42,19 +43,28 @@
         <td><a th:href="@{/index/update(id=${row.maSoTietKiem})}">Edit</a></td>
         <td><a th:href="@{/index/detail/{id}(id=${row.maSoTietKiem})}">Detail</a></td>
         <td><a th:href="@{/index/delete/{id}(id=${row.maSoTietKiem})}">Delete</a></td>
-<!--        <td>-->
-<!--            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"-->
-<!--               th:onclick=" 'upload(\''+${row.maSoTietKiem}+ '\',\''+${row.kyHan}+'\',\''+${row.soTienGui}+'\',\''+${row.khachHang.tenKhachHang}+'\');' ">-->
-<!--                Delete-->
-<!--            </a>-->
-<!--        </td>-->
+        <!--        <td>-->
+        <!--            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"-->
+        <!--               th:onclick=" 'upload(\''+${row.maSoTietKiem}+ '\',\''+${row.kyHan}+'\',\''+${row.soTienGui}+'\',\''+${row.khachHang.tenKhachHang}+'\');' ">-->
+        <!--                Delete-->
+        <!--            </a>-->
+        <!--        </td>-->
 
 
     </tr>
 </table>
 <!--<p style="color: green" th:text="${msgDelete}"></p>-->
-
-
+<div class="w3-center w3-padding-32">
+    <div class="w3-bar">
+        <a th:if="${soTietKiemList.hasPrevious()}"
+           th:href="@{/index(page=${soTietKiemList.number - 1}, tenKhachHang=${tenKhachHangThuc},ngayBatDau=${ngayBatDauThuc},ngayKetThuc=${ngayKetThucThuc})}"
+           class="w3-bar-item w3-button w3-hover-black">«</a>
+        <span th:text="${soTietKiemList.number + 1}"></span> / <span th:text="${soTietKiemList.totalPages}"></span>
+        <a th:if="${soTietKiemList.hasNext()}"
+           th:href="@{/index(page=${soTietKiemList.number + 1}, tenKhachHang=${tenKhachHangThuc},ngayBatDau=${ngayBatDauThuc},ngayKetThuc=${ngayKetThucThuc})}"
+           class="w3-bar-item w3-button w3-hover-black">»</a>
+    </div>
+</div>
 
 
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
