--- a/ss9_aop_and_exception_handling/bai_tap/muon_sach_aop_spring_boot/src/main/resources/templates/views/list.html
+++ b/ss9_aop_and_exception_handling/bai_tap/muon_sach_aop_spring_boot/src/main/resources/templates/views/list.html
@@ -10,6 +10,7 @@
 
 <h2>Danh sách Sách</h2>
 <a href="/index/create">Mượn sách</a>
+<a href="/index/remove">Trả sách</a>
 <p style="color: green" th:text="${msg}"></p>
 
 
