--- a/case_study/case_study/src/main/resources/templates/views/employee/list_employee.html
+++ b/case_study/case_study/src/main/resources/templates/views/employee/list_employee.html
@@ -80,7 +80,7 @@
         }
 
         table.table tr th:first-child {
-            width: 850px;
+            width: 60px;
         }
 
         table.table tr th:last-child {
@@ -423,58 +423,196 @@
                                 <path
                                         d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"></path>
                             </svg>
-                            <a href="/shop" style="color: white">
-                                Back to <b>Shop</b>
+                            <a href="/" style="color: white">
+                                Back to <b>HomePage</b>
                             </a>
                         </button>
                     </div>
                     <div class="col-sm-4 text-center">
-                        <h2>Manage <b>Products</b></h2>
+                        <h2>Manage <b>Employees</b></h2>
                     </div>
 
+                    <!--                    ADD NEW CUSTOMER-->
+                    <div class="col-sm-4">
+                        <a href="/employee/create" class="btn btn-success"><i class="material-icons">&#xE147;</i>
+                            <span>Add New Employee</span>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <form action="/payment" method="post">
+            <div class="table-filter">
+                <div class="row">
+                    <div class="col-sm-3">
+
+                        <!--                        FORM SORT-->
+                        <form method="get" id="sortForm" onchange="submitSortForm()" action="/employee/list">
+                            <div class="filter-group">
+                                <select th:name="sortOption" id="sort" class="form-control">
+                                    <option value="" selected>Sort</option>
+                                    <!--                                    <option value="idSort">Sort by ID</option>-->
+                                    <option value="nameSort">Sort by name</option>
+                                    <!--                                    <option value="birthdaySort">Sort by birthday</option>-->
+                                </select>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-sm-9">
+
+                        <!--                        FORM SEARCH-->
+                        <div class="filter-group">
+                            <div class="filter-group d-flex">
+
+                                <!--                                REFRESH BUTTON-->
+                                <span class="input-group-text" id="basic-addon1"
+                                      style="width: fit-content;padding-bottom: 0px;">
+                                      <a href="/employee?action=list" type="button"><svg
+                                              xmlns="http://www.w3.org/2000/svg" width="16"
+                                              height="16"
+                                              fill="currentColor"
+                                              class="bi bi-arrow-clockwise" viewBox="0 0 16 16"
+                                              style="margin-bottom: 6px;">
+                                          <path fill-rule="evenodd"
+                                                d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"></path>
+                                          <path
+                                                  d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"></path>
+                                      </svg></a>
+
+                                    </span>
+                                <form method="get" action="/employee/list">
+                                    <input type="hidden" name="action" value="search">
+                                    <!--                                    <input type="text" class="form-control" placeholder="Search by code"-->
+                                    <!--                                           aria-label="Input group example" aria-describedby="basic-addon1"-->
+                                    <!--                                           name="codeSearch">-->
+                                    <input type="text" class="form-control" placeholder="Search by name"
+                                           aria-label="Input group example" aria-describedby="basic-addon1"
+                                           name="nameSearch">
+                                    <input type="text" class="form-control" placeholder="Search by address"
+                                           aria-label="Input group example" aria-describedby="basic-addon1"
+                                           name="addressSearch">
+                                    <button type="submit" class="btn btn-primary" style="margin-left: 10px;"><i
+                                            class="fa fa-search"></i></button>
+                                </form>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
             <table class="table table-striped table-hover">
                 <thead>
                 <tr>
-                    <th>Item</th>
-                    <th>Quantity</th>
-                    <th>Price</th>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Birthday</th>
+                    <th>Id Card Number</th>
+                    <th>Salary</th>
+                    <th>Phone</th>
+                    <th>Email</th>
+                    <th>Address</th>
+                    <th>Position</th>
+                    <th>Division</th>
+                    <th>Education Degree</th>
+                    <th>Username</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
                 <tbody>
-                <div th:if="${cart != null}">
-                    <tr th:each="product: ${cart.products}">
-                        <td th:text="${product.getKey().name}"></td>
-                        <td>
-                            <a id="decrease_button" th:text="${'-'}"
-                               th:href="@{/add/__${product.getKey().id}__(action='sub')}"></a>
-                            <span th:text="${product.getValue()}"></span>
-                            <a id="increase_button" th:href="@{/add/__${product.getKey().id}__(action='add')}"
-                               th:text="${'+'}"></a>
-                        </td>
-                        <td th:text="${product.getKey().price}"></td>
-                        <td colspan="2">
-                            <a th:href="@{/detail/__${product.getKey().id}__}">Detail</a>
-                            <a th:href="@{/delete/__${product.getKey().id}__}">Delete</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Total</td>
-                        <td></td>
-                        <td th:text="${cart.countTotalPayment()}"></td>
-                    </tr>
-                </div>
+                <tr th:each="employee : ${employeeList}">
+
+                    <td th:text="${employee.employeeId}"></td>
+                    <td th:text="${employee.employeeName}"></td>
+                    <td th:text="${employee.employeeBirthday}"></td>
+                    <td th:text="${employee.employeeIdCard}"></td>
+                    <td th:text="${employee.employeeSalary}"></td>
+                    <td th:text="${employee.employeePhone}"></td>
+                    <td th:text="${employee.employeeEmail}"></td>
+                    <td th:text="${employee.employeeAddress}"></td>
+                    <td th:switch="${employee.position.positionId}">
+                        <span th:case="1">Quản lý </span>
+                        <span th:case="2">Nhân viên </span>
+                        <span th:case="*">None </span>
+                    </td>
+                    <td th:switch="${employee.division.divisionId}">
+                        <span th:case="1">Sale-Marketing </span>
+                        <span th:case="2">Hành chính </span>
+                        <span th:case="3">Phục vụ </span>
+                        <span th:case="4">Quản lý </span>
+                        <span th:case="*">None</span>
+                    </td>
+                    <td th:switch="${employee.educationDegree.educationDegreeId}">
+                        <span th:case="1">Trung Cấp </span>
+                        <span th:case="2">Cao Đẳng </span>
+                        <span th:case="3">Đại Học </span>
+                        <span th:case="4">Sau Đại Học </span>
+                        <span th:case="*">None</span>
+                    </td>
+                    <td th:text="${employee.user == null ? 'None' : employee.user.username}"></td>
+                    <td colspan="2">
+                        <a th:href="@{/employee/update/{id}(id=${employee.employeeId})}">Update</a>
+                        <a th:href="@{/employee/delete/{id}(id=${employee.employeeId})}">Delete</a>
+                    </td>
+                </tr>
                 </tbody>
             </table>
-            <button>Payment</button>
-        </form>
+            <div class="clearfix">
+                <!--                                   <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>-->
+                <ul class="pagination">
+                    <a th:if="${employeeList.hasPrevious()}"
+                       th:href="@{/employee/list(page=${employeeList.number - 1}, nameSearch=${name},addressSearch=${address},sortOption=${sortOption})}"
+                       class="page-link">«</a>
+                    <span th:text="${employeeList.number + 1}" class="page-item"></span> / <span
+                        th:text="${employeeList.totalPages}" class="page-item"></span>
+                    <a th:if="${employeeList.hasNext()}"
+                       th:href="@{/employee/list(page=${employeeList.number + 1}, nameSearch=${name},addressSearch=${address},sortOption=${sortOption})}"
+                       class="page-link">»</a>
+
+
+                    <!--                                           <li class="page-item disabled"><a href="/employee?action=list&numberPage=${numberPage-1}">Previous</a></li>-->
+                    <!--                    <c:forEach begin="1" end="${endPageNumber}" var="numberPage">-->
+                    <!--                        <li class="page-item"><a href="/employee?action=list&numberPage=${numberPage}"-->
+                    <!--                                                 class="page-link">${numberPage}</a></li>-->
+                    <!--                    </c:forEach>-->
+                    <!--                                           <li class="page-item"><a href="/employee?action=list&numberPage=${numberPage+1}" class="page-link">Next</a></li>-->
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
-</div>
-<p th:text="${msg}" style="color: red; text-align: center"></p>
+
+<!--<%&#45;&#45;MODAL DELETE&#45;&#45;%>-->
+
+<!--<%&#45;&#45;MODAL CREATE CUSTOMER&#45;&#45;%>-->
+
+<!--<%&#45;&#45;MODAL EDIT&#45;&#45;%>-->
+
+
 </body>
+<script>
+    function getIdDelete(id) {
+        document.getElementById("idGetDelete").value = id;
+    }
+
+    function getIdUpdate(id) {
+        document.getElementById("idGetUpdate").value = id;
+    }
+
+    function submitSortForm() {
+        document.getElementById("sortForm").submit();
+    }
+
+    function edit(employeeCode, employeeName, employeeBirthday, employeeGender, employeeIdCard, employeePhone, employeeEmail, employeeAddress, employeeTypeId) {
+        document.getElementById("employeeCode").value = employeeCode;
+        document.getElementById("employeeName").value = employeeName;
+        document.getElementById("employeeBirthday").value = employeeBirthday;
+        document.getElementById("employeeGender").value = employeeGender;
+        document.getElementById("employeeIdCard").value = employeeIdCard;
+        document.getElementById("employeePhone").value = employeePhone;
+        document.getElementById("employeeEmail").value = employeeEmail;
+        document.getElementById("employeeAddress").value = employeeAddress;
+        document.getElementById("employeeTypeId").value = employeeTypeId;
+        console.log(employeeId);
+    }
+
+</script>
 </html>
