--- a/case_study/case_study/src/main/resources/templates/views/employee/create_employee.html
+++ b/case_study/case_study/src/main/resources/templates/views/employee/create_employee.html
@@ -90,7 +90,7 @@
         <div class="col-md-8 mx-auto">
             <div class="contact-form">
                 <h1>Get in Touch</h1>
-                <form action="/employee/create" method="post" th:object="${employeeDto}">
+                <form action="/employeeRestful/create" method="post" th:object="${employeeDto}">
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
